[WIP] Refactor EV code, finish EVS initialization

--- a/jwang/notes/test_ev_ssm.ipynb
+++ b/jwang/notes/test_ev_ssm.ipynb
@@ -62,6 +62,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['u', 'u0', 'soc', 'bd', 'c', 'c2', 'c0', 'sx', 'dP', 'xl', 'soci',\n",
+       "       'socd', 'Pc', 'Pd', 'nc', 'nd', 'Q', 'ts', 'tf', 'tt', 'pref', 'lc',\n",
+       "       'agc', 'mod', 'na', 'nama', 'nam', 'soc0', 'na0'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sse.ev.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [
