--- a/jwang/eva/eva_refactor.ipynb
+++ b/jwang/eva/eva_refactor.ipynb
@@ -20,37 +20,13 @@
    "source": [
     "from tqdm import tqdm\n",
     "import sys\n",
-    "import time"
+    "import time\n",
+    "import timeit"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# xf = 10\n",
-    "# step = 1\n",
-    "# xp = tqdm(total=100, unit='%', file=sys.stdout,) # Initialise\n",
-    "# x = 0\n",
-    "# while x < xf:\n",
-    "#     time.sleep(0.2)\n",
-    "#     xp.update(100*step/xf)\n",
-    "#     x += step\n",
-    "# xp.close()\n",
-    "\n",
-    "# xp = tqdm(total=100, unit='%', file=sys.stdout,) # Initialise\n",
-    "# xf = 20\n",
-    "# while x < xf:\n",
-    "#     time.sleep(0.2)\n",
-    "#     xp.update(100*step/xf)\n",
-    "#     x += step\n",
-    "# xp.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -58,9 +34,9 @@
      "output_type": "stream",
      "text": [
       "EVS1 Memory usage:\n",
-      "Static data: 1015.8 KB, Dynamic data: 937.6 KB\n",
+      "Static data: 1015.8 KB, Dynamic data: 859.5 KB\n",
       "Memory save is turned on, EVs out of time range [18.0, 19.0] are dropped. \n",
-      "Static data: 356.6 KB, Dynamic data: 329.2 KB\n",
+      "Static data: 356.6 KB, Dynamic data: 301.8 KB\n",
       "EVS1: Initialized successfully with:\n",
       "Capacity: 10000, r: 0.5\n",
       "EVS1: clock time: 18.0, Online: 2925, Total: 3510\n"
@@ -70,7 +46,8 @@
    "source": [
     "evs_config = {'N': 10000, 'Ns': 20,\n",
     "              'Tagc': 4.0, 'socf': 0.2,\n",
-    "              'ict': 0, 'memory_save': 1,\n",
+    "              'agc': 0, 'ict': 0,\n",
+    "              'memory_save': 1,\n",
     "              'seed': 2022, 'r': 0.5}\n",
     "\n",
     "mcs_config = {'ts': 18.0, 'h': 1.0,\n",
@@ -94,7 +71,39 @@
     "                mcs_config=mcs_config,\n",
     "                config=evs_config,\n",
     "                ud_param=ud_param,\n",
-    "                nd_param=nd_param)\n"
+    "                nd_param=nd_param)\n",
+    "\n",
+    "datad = evs.MCS.data.d\n",
+    "datas = evs.MCS.data.s\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 100.0/100 [00:06<00:00, 15.51%/s]             \n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%timeit -r 1 -n 1\n",
+    "evs.MCS.config.tf = 3600\n",
+    "evs.MCS.run()"
    ]
   },
   {
@@ -103,44 +112,103 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  0%|          | 0/100 [00:00<?, ?%/s]update progess 20.0\n",
-      " 20%|██        | 20.0/100 [00:00<00:00, 185.87%/s]update progess 20.0\n",
-      " 40%|████      | 40.0/100 [00:00<00:00, 190.17%/s]update progess 20.0\n",
-      " 60%|██████    | 60.0/100 [00:00<00:00, 189.58%/s]update progess 20.0\n",
-      " 80%|████████  | 80.0/100 [00:00<00:00, 189.49%/s]update progess 20.0\n",
-      "100%|██████████| 100.0/100 [00:00<00:00, 190.43%/s]\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>idx</th>\n",
+       "      <th>u</th>\n",
+       "      <th>u0</th>\n",
+       "      <th>soc</th>\n",
+       "      <th>c</th>\n",
+       "      <th>lc</th>\n",
+       "      <th>sx</th>\n",
+       "      <th>na</th>\n",
+       "      <th>ama</th>\n",
+       "      <th>agc</th>\n",
+       "      <th>mod</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>22</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.815045</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>299.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>25</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.720660</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>2102.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36</th>\n",
+       "      <td>36</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.793017</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>2453.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    idx    u   u0       soc    c   lc    sx      na  ama  agc  mod\n",
+       "22   22  1.0  1.0  0.815045  0.0  0.0  14.0   299.0  0.0  0.0  0.0\n",
+       "25   25  1.0  1.0  0.720660  1.0  0.0  11.0  2102.0  0.0  0.0  0.0\n",
+       "36   36  1.0  1.0  0.793017  0.0  0.0  10.0  2453.0  0.0  0.0  0.0"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "evs.MCS.config.tf = 5\n",
-    "evs.MCS.run()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  0%|          | 0/100 [00:00<?, ?%/s]update progess 70.0\n",
-      " 70%|███████   | 70.0/100 [00:00<00:00, 671.96%/s]update progess 20.0\n",
-      "update progess 20.0\n",
-      "update progess 20.0\n",
-      "update progess 20.0\n",
-      "150.0% [00:00, 289.78%/s]                         \n"
-     ]
-    }
-   ],
-   "source": [
-    "evs.MCS.config.tf = 10\n",
-    "evs.MCS.run()"
+    "mask = datad[datad['soc'] >= datas['socd']].index\n",
+    "mask = datad[datad['c'] > 0.0].index\n",
+    "mask = [22, 25, 36]\n",
+    "datad.iloc[mask].head()"
    ]
   },
   {
@@ -149,17 +217,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "evs.MCS.config.tf = 40\n",
-    "evs.MCS.run()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "evs.MCS.config"
+    "datas.iloc[mask].head()"
    ]
   },
   {
