[WIP] Refactor EV code, finish EVS initialization

--- a/jwang/eva/eva_refactor.ipynb
+++ b/jwang/eva/eva_refactor.ipynb
@@ -83,16 +83,79 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 100.0/100 [00:06<00:00, 15.51%/s]             \n"
-     ]
-    },
-    {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>t</th>\n",
+       "      <th>Pi</th>\n",
+       "      <th>Prc</th>\n",
+       "      <th>Ptc</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-0.0</td>\n",
+       "      <td>-7.265171</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "True"
+       "     t   Pi  Prc       Ptc\n",
+       "0  0.0  0.0 -0.0 -7.265171\n",
+       "1  1.0  NaN  NaN       NaN\n",
+       "2  2.0  NaN  NaN       NaN\n",
+       "3  3.0  NaN  NaN       NaN\n",
+       "4  4.0  NaN  NaN       NaN"
       ]
      },
      "execution_count": 4,
@@ -101,14 +164,41 @@
     }
    ],
    "source": [
-    "%timeit -r 1 -n 1\n",
-    "evs.MCS.config.tf = 3600\n",
-    "evs.MCS.run()"
+    "evs.MCS.data.ts.head()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 100.0/100 [00:00<00:00, 344.77%/s]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%timeit -r 1 -n 1\n",
+    "evs.MCS.config.tf = 100\n",
+    "evs.MCS.run()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -133,73 +223,90 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>idx</th>\n",
-       "      <th>u</th>\n",
-       "      <th>u0</th>\n",
-       "      <th>soc</th>\n",
-       "      <th>c</th>\n",
-       "      <th>lc</th>\n",
-       "      <th>sx</th>\n",
-       "      <th>na</th>\n",
-       "      <th>ama</th>\n",
-       "      <th>agc</th>\n",
-       "      <th>mod</th>\n",
+       "      <th>ts</th>\n",
+       "      <th>tf</th>\n",
+       "      <th>tt</th>\n",
+       "      <th>soc0</th>\n",
+       "      <th>na0</th>\n",
+       "      <th>soci</th>\n",
+       "      <th>socd</th>\n",
+       "      <th>Pc</th>\n",
+       "      <th>Pd</th>\n",
+       "      <th>nc</th>\n",
+       "      <th>nd</th>\n",
+       "      <th>Q</th>\n",
+       "      <th>nam</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>22</th>\n",
        "      <td>22</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.815045</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>14.0</td>\n",
+       "      <td>16.154845</td>\n",
+       "      <td>22.947500</td>\n",
+       "      <td>0.510039</td>\n",
+       "      <td>0.704684</td>\n",
        "      <td>299.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0.323862</td>\n",
+       "      <td>0.815044</td>\n",
+       "      <td>6.384295</td>\n",
+       "      <td>6.647559</td>\n",
+       "      <td>0.92520</td>\n",
+       "      <td>0.92520</td>\n",
+       "      <td>28.619342</td>\n",
+       "      <td>3327.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25</th>\n",
        "      <td>25</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.720660</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>11.0</td>\n",
+       "      <td>16.240329</td>\n",
+       "      <td>22.972251</td>\n",
+       "      <td>0.479458</td>\n",
+       "      <td>0.559021</td>\n",
        "      <td>2102.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0.251898</td>\n",
+       "      <td>0.769225</td>\n",
+       "      <td>5.304374</td>\n",
+       "      <td>5.593336</td>\n",
+       "      <td>0.89349</td>\n",
+       "      <td>0.89349</td>\n",
+       "      <td>27.154496</td>\n",
+       "      <td>2888.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>36</th>\n",
        "      <td>36</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.793017</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>10.0</td>\n",
+       "      <td>17.032969</td>\n",
+       "      <td>23.187378</td>\n",
+       "      <td>0.495292</td>\n",
+       "      <td>0.547599</td>\n",
        "      <td>2453.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0.288775</td>\n",
+       "      <td>0.792945</td>\n",
+       "      <td>5.813908</td>\n",
+       "      <td>6.312969</td>\n",
+       "      <td>0.94939</td>\n",
+       "      <td>0.94939</td>\n",
+       "      <td>20.622878</td>\n",
+       "      <td>4202.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    idx    u   u0       soc    c   lc    sx      na  ama  agc  mod\n",
-       "22   22  1.0  1.0  0.815045  0.0  0.0  14.0   299.0  0.0  0.0  0.0\n",
-       "25   25  1.0  1.0  0.720660  1.0  0.0  11.0  2102.0  0.0  0.0  0.0\n",
-       "36   36  1.0  1.0  0.793017  0.0  0.0  10.0  2453.0  0.0  0.0  0.0"
+       "    idx         ts         tf        tt      soc0     na0      soci      socd  \\\n",
+       "22   22  16.154845  22.947500  0.510039  0.704684   299.0  0.323862  0.815044   \n",
+       "25   25  16.240329  22.972251  0.479458  0.559021  2102.0  0.251898  0.769225   \n",
+       "36   36  17.032969  23.187378  0.495292  0.547599  2453.0  0.288775  0.792945   \n",
+       "\n",
+       "          Pc        Pd       nc       nd          Q     nam  \n",
+       "22  6.384295  6.647559  0.92520  0.92520  28.619342  3327.0  \n",
+       "25  5.304374  5.593336  0.89349  0.89349  27.154496  2888.0  \n",
+       "36  5.813908  6.312969  0.94939  0.94939  20.622878  4202.0  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,15 +315,7 @@
     "mask = datad[datad['soc'] >= datas['socd']].index\n",
     "mask = datad[datad['c'] > 0.0].index\n",
     "mask = [22, 25, 36]\n",
-    "datad.iloc[mask].head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "datad.iloc[mask].head()\n",
     "datas.iloc[mask].head()"
    ]
   },
@@ -225,9 +324,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "evs.MCS.data.ts"
-   ]
+   "source": []
   }
  ],
  "metadata": {
