Refactor EV code, fix EVS dtype

--- a/jwang/eva/eva_refactor.ipynb
+++ b/jwang/eva/eva_refactor.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,25 +26,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "EVS1 Memory usage:\n",
-      "Static data: 1015.8 KB, Dynamic data: 859.5 KB\n",
-      "Memory save is turned on, EVs out of time range [18.0, 19.0] are dropped. \n",
-      "Static data: 356.6 KB, Dynamic data: 301.8 KB\n",
-      "EVS1: Initialized successfully with:\n",
-      "Capacity: 10000, r: 0.5\n",
-      "EVS1: clock time: 18.0, Online: 2925, Total: 3510\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "evs_config = {'N': 10000, 'Ns': 20,\n",
+    "evs_config = {'N': 50000, 'Ns': 20,\n",
     "              'Tagc': 4.0, 'socf': 0.2,\n",
     "              'agc': 0, 'ict': 0,\n",
     "              'memory_save': 1,\n",
@@ -65,258 +51,48 @@
     "            'Pd': {'lb': 5.0, 'ub': 7.0},\n",
     "            'nc': {'lb': 0.88, 'ub': 0.95},\n",
     "            'nd': {'lb': 0.88, 'ub': 0.95},\n",
-    "            'Q': {'lb': 20.0, 'ub': 30.0}}\n",
-    "\n",
+    "            'Q': {'lb': 20.0, 'ub': 30.0}}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import logging\n",
+    "logger = logging.getLogger()\n",
+    "logging.getLogger(\"eva\").setLevel(logging.INFO)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Memory save is turned on, EVs out of time range [18.0, 19.0] are dropped.\n",
+      "EVS1: Initialized successfully with:\n",
+      "Capacity: 50000, r: 0.5\n",
+      "EVS1: clock time: 18.0, Online: 14477, Total: 17373\n"
+     ]
+    }
+   ],
+   "source": [
     "evs = EVStation(name='EVS1',\n",
     "                mcs_config=mcs_config,\n",
     "                config=evs_config,\n",
     "                ud_param=ud_param,\n",
     "                nd_param=nd_param)\n",
     "\n",
-    "datad = evs.MCS.data.d\n",
-    "datas = evs.MCS.data.s\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>t</th>\n",
-       "      <th>Pi</th>\n",
-       "      <th>Prc</th>\n",
-       "      <th>Ptc</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>-0.0</td>\n",
-       "      <td>-7.265171</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     t   Pi  Prc       Ptc\n",
-       "0  0.0  0.0 -0.0 -7.265171\n",
-       "1  1.0  NaN  NaN       NaN\n",
-       "2  2.0  NaN  NaN       NaN\n",
-       "3  3.0  NaN  NaN       NaN\n",
-       "4  4.0  NaN  NaN       NaN"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "evs.MCS.data.ts.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 100.0/100 [00:00<00:00, 344.77%/s]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "%timeit -r 1 -n 1\n",
-    "evs.MCS.config.tf = 100\n",
-    "evs.MCS.run()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>idx</th>\n",
-       "      <th>ts</th>\n",
-       "      <th>tf</th>\n",
-       "      <th>tt</th>\n",
-       "      <th>soc0</th>\n",
-       "      <th>na0</th>\n",
-       "      <th>soci</th>\n",
-       "      <th>socd</th>\n",
-       "      <th>Pc</th>\n",
-       "      <th>Pd</th>\n",
-       "      <th>nc</th>\n",
-       "      <th>nd</th>\n",
-       "      <th>Q</th>\n",
-       "      <th>nam</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>22</td>\n",
-       "      <td>16.154845</td>\n",
-       "      <td>22.947500</td>\n",
-       "      <td>0.510039</td>\n",
-       "      <td>0.704684</td>\n",
-       "      <td>299.0</td>\n",
-       "      <td>0.323862</td>\n",
-       "      <td>0.815044</td>\n",
-       "      <td>6.384295</td>\n",
-       "      <td>6.647559</td>\n",
-       "      <td>0.92520</td>\n",
-       "      <td>0.92520</td>\n",
-       "      <td>28.619342</td>\n",
-       "      <td>3327.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>25</td>\n",
-       "      <td>16.240329</td>\n",
-       "      <td>22.972251</td>\n",
-       "      <td>0.479458</td>\n",
-       "      <td>0.559021</td>\n",
-       "      <td>2102.0</td>\n",
-       "      <td>0.251898</td>\n",
-       "      <td>0.769225</td>\n",
-       "      <td>5.304374</td>\n",
-       "      <td>5.593336</td>\n",
-       "      <td>0.89349</td>\n",
-       "      <td>0.89349</td>\n",
-       "      <td>27.154496</td>\n",
-       "      <td>2888.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>36</th>\n",
-       "      <td>36</td>\n",
-       "      <td>17.032969</td>\n",
-       "      <td>23.187378</td>\n",
-       "      <td>0.495292</td>\n",
-       "      <td>0.547599</td>\n",
-       "      <td>2453.0</td>\n",
-       "      <td>0.288775</td>\n",
-       "      <td>0.792945</td>\n",
-       "      <td>5.813908</td>\n",
-       "      <td>6.312969</td>\n",
-       "      <td>0.94939</td>\n",
-       "      <td>0.94939</td>\n",
-       "      <td>20.622878</td>\n",
-       "      <td>4202.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    idx         ts         tf        tt      soc0     na0      soci      socd  \\\n",
-       "22   22  16.154845  22.947500  0.510039  0.704684   299.0  0.323862  0.815044   \n",
-       "25   25  16.240329  22.972251  0.479458  0.559021  2102.0  0.251898  0.769225   \n",
-       "36   36  17.032969  23.187378  0.495292  0.547599  2453.0  0.288775  0.792945   \n",
-       "\n",
-       "          Pc        Pd       nc       nd          Q     nam  \n",
-       "22  6.384295  6.647559  0.92520  0.92520  28.619342  3327.0  \n",
-       "25  5.304374  5.593336  0.89349  0.89349  27.154496  2888.0  \n",
-       "36  5.813908  6.312969  0.94939  0.94939  20.622878  4202.0  "
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "mask = datad[datad['soc'] >= datas['socd']].index\n",
-    "mask = datad[datad['c'] > 0.0].index\n",
-    "mask = [22, 25, 36]\n",
-    "datad.iloc[mask].head()\n",
-    "datas.iloc[mask].head()"
+    "evs.MCS.config.tf = 3600\n",
+    "evs.MCS.config.no_tqdm = 0\n",
+    "evs.MCS.run()\n",
+    "evs.MCS.data\n",
+    "evs.MCS.data.d.info(verbose=False, memory_usage=True)"
    ]
   },
   {
