--- a/jwang/eva/eva_refactor.ipynb
+++ b/jwang/eva/eva_refactor.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -78,6 +78,18 @@
       "EVS1: Initialized successfully with:\n",
       "Capacity: 50000, r: 0.5\n",
       "EVS1: clock time: 18.0, Online: 14477, Total: 17373\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 100.0/100 [00:12<00:00,  8.22%/s]             \n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 17373 entries, 0 to 17372\n",
+      "Columns: 11 entries, idx to mod\n",
+      "dtypes: float32(6), float64(4), int32(1)\n",
+      "memory usage: 1018.1 KB\n"
      ]
     }
    ],
@@ -94,13 +106,6 @@
     "evs.MCS.data\n",
     "evs.MCS.data.d.info(verbose=False, memory_usage=True)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
