[WIP] Refactor EV code, demo show numpy is faster

--- a/jwang/eva/eva_refactor.ipynb
+++ b/jwang/eva/eva_refactor.ipynb
@@ -28,6 +28,26 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'3.9.12 | packaged by conda-forge | (main, Mar 24 2022, 23:24:38) \\n[Clang 12.0.1 ]'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sys.version"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
     "evs_config = {'N': 50000, 'Ns': 20,\n",
@@ -56,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -79,20 +99,119 @@
       "Capacity: 50000, r: 0.5\n",
       "EVS1: clock time: 18.0, Online: 14477, Total: 17373\n"
      ]
-    },
+    }
+   ],
+   "source": [
+    "evs = EVStation(name='EVS1',\n",
+    "                mcs_config=mcs_config,\n",
+    "                config=evs_config,\n",
+    "                ud_param=ud_param,\n",
+    "                nd_param=nd_param)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xdf = evs.MCS.data.d.copy()\n",
+    "xsf = evs.MCS.data.s.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100.0/100 [00:12<00:00,  8.22%/s]             \n",
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 17373 entries, 0 to 17372\n",
-      "Columns: 11 entries, idx to mod\n",
-      "dtypes: float32(6), float64(4), int32(1)\n",
-      "memory usage: 1018.1 KB\n"
+      "142 µs ± 21.7 µs per loop (mean ± std. dev. of 20 runs, 20 loops each)\n"
      ]
     }
    ],
+   "source": [
+    "%%timeit -r 20 -n 20\n",
+    "xdf['u'] * xdf['c'] * xsf['Pc'] * xsf['nc'] * 1/3600"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['idx', 'u', 'u0', 'soc', 'c', 'lc', 'sx', 'na', 'ama', 'agc', 'mod'], dtype='object')"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "xdf.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['idx', 'ts', 'tf', 'tt', 'soc0', 'na0', 'soci', 'socd', 'Pc', 'Pd',\n",
+       "       'nc', 'nd', 'Q', 'nam'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "xsf.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xd = evs.MCS.data.d.values\n",
+    "xs = evs.MCS.data.s.values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "24.6 µs ± 12.6 µs per loop (mean ± std. dev. of 20 runs, 20 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit -r 20 -n 20\n",
+    "xd[:, 1] * xd[:, 4] * xs[:, 8] * xs[:, 10] * 1/3600"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "evs = EVStation(name='EVS1',\n",
     "                mcs_config=mcs_config,\n",
