[WIP] Refactor EV code, change to numpy, debug with init 4

--- a/jwang/eva/eva_refactor.ipynb
+++ b/jwang/eva/eva_refactor.ipynb
@@ -9,7 +9,8 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
-    "from eva import EVStation"
+    "from eva import EVStation\n",
+    "from eva import DictAttr"
    ]
   },
   {
@@ -57,7 +58,7 @@
     "              'seed': 2022, 'r': 0.5}\n",
     "\n",
     "mcs_config = {'ts': 18.0, 'h': 1.0,\n",
-    "              'no_tqdm': 0, 'th': 1}\n",
+    "              'no_tqdm': 0, 'th': 1.0}\n",
     "\n",
     "nd_param = {'soci': {'mu': 0.3, 'var': 0.05, 'lb': 0.2, 'ub': 0.4},\n",
     "            'socd': {'mu': 0.8, 'var': 0.03, 'lb': 0.7, 'ub': 0.9},\n",
@@ -91,13 +92,10 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Memory save is turned on, EVs out of time range [18.0, 19.0] are dropped.\n",
-      "EVS1: Initialized successfully with:\n",
-      "Capacity: 50000, r: 0.5\n",
-      "EVS1: clock time: 18.0, Online: 14477, Total: 17373\n"
+      "(50000,)\n"
      ]
     }
    ],
@@ -111,30 +109,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "xdf = evs.MCS.data.d.copy()\n",
-    "xsf = evs.MCS.data.s.copy()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "142 µs ± 21.7 µs per loop (mean ± std. dev. of 20 runs, 20 loops each)\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%timeit -r 20 -n 20\n",
-    "xdf['u'] * xdf['c'] * xsf['Pc'] * xsf['nc'] * 1/3600"
+    "sdf = evs.MCS.data.s.as_df()\n",
+    "sdf[sdf['tf'] < 18]"
    ]
   },
   {
@@ -145,7 +125,7 @@
     {
      "data": {
       "text/plain": [
-       "Index(['idx', 'u', 'u0', 'soc', 'c', 'lc', 'sx', 'na', 'ama', 'agc', 'mod'], dtype='object')"
+       "array([    0,     1,     2, ..., 49997, 49998, 49999])"
       ]
      },
      "execution_count": 9,
@@ -154,34 +134,235 @@
     }
    ],
    "source": [
+    "self = evs\n",
+    "dsp = self.MCS.data.s  # pointer to static data\n",
+    "ddp = self.MCS.data.d  # pointer to dynamic data\n",
+    "\n",
+    "mask_u1 = dsp.get(src='ts') > (self.MCS.config.ts + self.MCS.config.th)\n",
+    "mask_u2 = dsp.get(src='tf') < self.MCS.config.ts\n",
+    "mask = mask_u1 | mask_u2\n",
+    "drop_id = np.where(mask)[0]\n",
+    "\n",
+    "for ary in [self.idx, self.MCS.data.idx, self.MCS.data.s.v, self.MCS.data.d.v]:\n",
+    "    ary = np.delete(ary, drop_id, axis=0)\n",
+    "\n",
+    "getattr(self.MCS.data.s, 'idx')\n",
+    "setattr(self.MCS.data.s, 'idx', np.delete(self.MCS.data.s.idx, drop_id, axis=0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ary.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.logical_and(mask_u1, mask_u2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mask_u1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mask_u2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mask_u1 & mask_u2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "evs.MCS.data.d.v.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "evs.MCS.data.d.set('soc', cond=np.array([False]*49999 + [True]),\n",
+    "                   data=np.array([1, 2]))\n",
+    "evs.MCS.data.d.as_df()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "evs.MCS.data.s.get('Pc', cond=np.array([True]*5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "evs.MCS.data.d.as_df()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "evs.MCS.config.ts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dsp = evs.MCS.data.s.v\n",
+    "mask = dsp[:, getattr(evs.MCS.data.col.s, 'ts')] < 0.3\n",
+    "dsp[mask & mask].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "evs.MCS.data.s.as_df()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "dc = {'s': ['ts', 'tf', 'tt', 'soc0', 'na0',\n",
+    "            'soci', 'socd', 'Pc', 'Pd',\n",
+    "            'nc', 'nd', 'Q'],\n",
+    "      'd': ['u', 'u0', 'soc', 'c', 'lc', 'sx',\n",
+    "            'na', 'ama', 'agc', 'mod']}\n",
+    "{\n",
+    "'s': {c: dc['s'].index(c) for c in dc['s']},\n",
+    "'d': {c: dc['d'].index(c) for c in dc['d']}\n",
+    "}\n",
+    "\n",
+    "from eva import DictAttr\n",
+    "sd = DictAttr({c: dc['s'].index(c) for c in dc['s']})\n",
+    "dd = DictAttr({c: dc['d'].index(c) for c in dc['d']})\n",
+    "dcd = DictAttr({'s': sd, 'd': dd})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.empty(100, 100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.arange(50000).shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%timeit -r 100 -n 10\n",
+    "dcd.s.Pc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dcd.d.u0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xdf = evs.MCS.data.d.copy()\n",
+    "xsf = evs.MCS.data.s.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%timeit -r 20 -n 20\n",
+    "xdf['u'] * xdf['c'] * xsf['Pc'] * xsf['nc'] * 1/3600"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "xdf.columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['idx', 'ts', 'tf', 'tt', 'soc0', 'na0', 'soci', 'socd', 'Pc', 'Pd',\n",
-       "       'nc', 'nd', 'Q', 'nam'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "xsf.columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,17 +372,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "24.6 µs ± 12.6 µs per loop (mean ± std. dev. of 20 runs, 20 loops each)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%timeit -r 20 -n 20\n",
     "xd[:, 1] * xd[:, 4] * xs[:, 8] * xs[:, 10] * 1/3600"
