Replace some IEEEG1 cases XLSX with JSON

--- a/examples/demonstration/IEEEG1.ipynb
+++ b/examples/demonstration/IEEEG1.ipynb
@@ -44,11 +44,11 @@
    "source": [
     "s1 = andes.load(andes.get_case('kundur/kundur_ieeeg1.xlsx'),\n",
     "                setup=False, no_output=True, default_config=True)\n",
-    "s2 = andes.load(andes.get_case('kundur/kundur_ieeeg1gv.xlsx'),\n",
+    "s2 = andes.load(andes.get_case('kundur/kundur_ieeeg1gv.json'),\n",
     "                setup=False, no_output=True, default_config=True)\n",
-    "s3 = andes.load(andes.get_case('kundur/kundur_ieeeg1ts.xlsx'),\n",
+    "s3 = andes.load(andes.get_case('kundur/kundur_ieeeg1ts.json'),\n",
     "                setup=False, no_output=True, default_config=True)\n",
-    "s4 = andes.load(andes.get_case('kundur/kundur_ieeeg1ts2.xlsx'),\n",
+    "s4 = andes.load(andes.get_case('kundur/kundur_ieeeg1ts2.json'),\n",
     "                setup=False, no_output=True, default_config=True)\n",
     "            \n",
     "for ss in [s1, s2, s3, s4]:\n",
